# http-flow

./: .env  .gitignore  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
backend/: main.py
backend/HttpInterceptor/: CoreMessage.py  CoreMessageType.py  FilterModel.py  FlowData.py  HeaderPair.py  OperationType.py  Operator.py  RuleAction.py  RuleModel.py  SyncMessage.py
backend/models/: backend_generated.py  base_models.py  events_generated.py  flat_utils.py
backend/services/: addon.py  proxy.py  storage.py  ws.py
backend/tests/: conftest.py  test_addon.py  test_flat_utils.py  test_models.py  test_proxy.py  test_storage.py  test_ws.py
backend/utils/: flat_utils.py
frontend/public/: background.js  manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FiltersDrawer.tsx  RequestDetails.tsx  RequestsTable.tsx  RulesDrawer.tsx  Toolbar.tsx
frontend/src/hooks/: useInitialization.ts
frontend/src/models/: events.ts  http-interceptor.ts  types.ts  ws_models_generated.ts
frontend/src/models/http-interceptor/: flow-data.ts  header-pair.ts  server-event.ts  web-socket-message-type.ts  web-socket-message.ts
frontend/src/services/: apiService.ts  flatBufferService.ts  http-interceptor.ts  webSocketService.ts
frontend/src/store/: types.ts  useAppStore.ts
frontend/tests/: setup.ts
frontend/tests/components/: App.test.tsx  RequestsTable.test.tsx  Toolbar.test.tsx
frontend/tests/services/: apiService.test.ts
frontend/tests/store/: useAppStore.test.ts
schema/: backend.fbs  common.fbs  core_models.fbs  events.fbs  frontend.fbs  ws_models.fbs
scripts/: dev.py  generate_flatbuffers.py  setup.py
